# medical-image-analysis

./: .flake8  .gitignore  .isort.ini  .mypy.ini  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
baseline/: train.py
baseline/models/: unet.py
baseline/utils/: augmentation.py  criterion.py  dataloader.py  loss.py  metrics.py
configs/: README.md  development.toml  sample.toml
dataset/train/: Data-sharing Agreement_FUGC2025.docx
notes/: CorrMLP.md  PCRL.md  Swin-UNETR.md  UNETR++.md  UNETR.md  VoCo.md
notes/diary/: Diary 16 Feb 2025.md  Diary 30 Dec 2024.md  Diary 6 Jan 2024.md
requirements/: listing.txt
scripts/: make_dev_setup
source/: info.py
source/dataset/: __main__.py  cli.py
source/dataset/construct/: __init__.py  handler.py
source/dataset/labeling/: __init__.py
source/datasets/: __main__.py
source/datasets/labeling/: handler.py
source/model/: __init__.py  __main__.py  cli.py
source/models/: base.py  nn_unet.py
source/visualize/: __init__.py  __main__.py  cli.py
src/activelearning/: __init__.py  active_selector.py  badge_selector.py  confidence_selector.py  coreset_selector.py  entropy_selector.py  kmean_selector.py  margin_selector.py  random_selector.py
src/cli/: __main__.py
src/cli/commands/: __init__.py  basecommand.py  visualizecommand.py
src/datasets/: __init__.py  active_dataset.py  basedataset.py  common.py
src/datasets/acdc/: __init__.py  acdc_dataset.py  kaggle_acdc_dataset.py
src/datasets/btcv/: __init__.py
src/datasets/busi/: __init__.py  busi_dataset.py
src/datasets/fugc/: __init__.py  fugc_dataset.py
src/datasets/la2018/: __init__.py  la2018_dataset.py
src/datasets/thyroid/: __init__.py  tg3k_dataset.py  tn3k_dataset.py
src/datasets/utils/: exceptions.py  logging.py
src/entry/: predict.py  train.py
src/entry/active_learning/: test.py  train.py
src/entry/activelearning/: train.py
src/entry/cpcsam/: train.py
src/entry/demo/: serve.py
src/entry/demo/view/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
src/entry/demo/view/src/: App.tsx
src/entry/demo/view/src/commons/: utils.ts
src/entry/demo/view/src/components/: Notification.tsx
src/entry/demo/view/src/hooks/: useApp.ts
src/entry/demo/view/src/models/: index.ts
src/entry/demo/view/src/services/: api.ts
src/entry/demo/view/src/styles/: App.css  global.css
src/entry/demo/web/: Dockerfile  app.py  config.py  docker-compose.yml
src/entry/demo/web/api/routes/: __init__.py  active_learning.py  dataset.py  models.py
src/entry/demo/web/core/: foundation_model.py  specialist_model.py  utils.py
src/entry/demo/web/models/: requests.py  responses.py
src/entry/demo/web/services/: active_learning.py  dataset.py  model.py
src/entry/fugc2025/: predict.py  train.py
src/entry/fugc2025/preprocess/: mask2rle.py  rle2mask.py
src/entry/preprocess/: mask2rle.py  rle2mask.py
src/losses/: adv_loss.py  compound_losses.py  contrastive_loss.py  dice.py  dice_loss.py  robust_ce_loss.py
src/memories/: feature_memory.py
src/metric/: __init__.py  metric.py
src/models/: __init__.py  _unet.py  unet.py
src/models/segment_anything/: __init__.py  automatic_mask_generator.py  build_sam.py  predictor.py  sam_lora_image_encoder.py  validation.py
src/models/segment_anything/modeling/: __init__.py  image_encoder.py  mask_decoder.py  mask_decoder_prompt_large.py  prompt_encoder.py  prompt_encoder_prompt_class.py  sam.py  sam_dualmask_same_prompt_class_random_large.py  transformer.py
src/models/segment_anything/utils/: onnx.py  transforms.py
src/models/unet/: __init__.py  blocks.py  unet.py  unet_processor.py
src/scheduler/: lr_scheduler.py  ramps.py
src/training/: __init__.py  active_learning_trainer.py  al_trainer.py  base_trainer.py  cpcsam_trainer.py  semi_trainer.py  unet_trainer.py
src/transforms/: common.py  image_transform.py  joint_transform.py  normalization.py
src/utils/: __init__.py  common.py  images.py  utils.py
src/utils/logging/: logger.py
submit/: model.py
(+7 files in other folders)
