[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mia"
authors = [
    {name = "Nam Khanh Tran", email = "21120015@student.hcmus.edu.vn"},
    {name = "Dac Phu Phan Le", email = "21120111@student.hcmus.edu.vn"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "wandb",
    "numpy<2",
    "monai", 
    "rich",
    "pillow",
    "tqdm",
    "rich",
    "opencv-python",
    "nnunetv2",
    "hiddenlayer @ git+https://github.com/FabianIsensee/hiddenlayer.git",
    "SimpleITK",
    "h5py",
    "medpy",
    "scikit-learn>=1.3",
    "gradio",
    "open_clip_torch",
    "fastapi~=0.116.1",
    "pydantic_settings~=2.10.1",
    "pydantic~=2.11.7",
    "transformers~=4.53.2"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []
namespaces = true

[project.scripts]
fugc2025_train = "entry.fugc2025.train:train_entry"
fugc2025_predict = "entry.fugc2025.predict:predict_entry"
fugc2025_mask2rle = "entry.fugc2025.preprocess.mask2rle:mask2rle_entry"
fugc2025_rle2mask = "entry.fugc2025.preprocess.rle2mask:rle2mask_entry"

cpcsam_train = "entry.cpcsam.train:train_entry"

al_train = "entry.activelearning.train:train_entry"

demo_serve = "entry.demo.serve:serve_entry"

demo_web = "entry.demo.web.app:main"

[tool.setuptools_scm]

